--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,34 @@ services:
     build: .
     ports:
       - "8000:8000"
-    command: sh -c "python manage.py migrate &&
-      python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     depends_on:
+      - db
+
+  celery_worker:
+    build: .
+    command: celery -A midas_case worker -Q celery -l INFO
+    environment:
+      - CELERY_BROKER=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    volumes:
+      - .:/code
+    depends_on:
+      - redis
+      - db
+
+  celery_beat:
+    build: .
+    command: celery -A midas_case beat -l INFO
+    environment:
+      - CELERY_BROKER=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    volumes:
+      - .:/code
+    depends_on:
+      - redis
       - db
 
   db:
@@ -27,16 +50,19 @@ services:
     image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
+
   kafka:
     image: wurstmeister/kafka
     ports:
       - "9092:9092"
     environment:
       KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_CREATE_TOPICS: "buy:1:1,sell:1:1,cancel:1:1"
+      KAFKA_CREATE_TOPICS: "buy:1:1,sell:1:1,cancel:1:1,test:1:1"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - zookeeper
 
   redis:
     image: bitnami/redis:latest
