--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-asgiref==3.6.0
+setuptools==57.5.0
+celery
 Django==4.1.7
+django-celery-beat
 djangorestframework==3.14.0
 psycopg2-binary==2.9.3
 pytz==2022.7.1
-sqlparse==0.4.3
 redis==4.5.1
+kafka-python
